center aligned label for Reactor action buttons. Also fixed "null" value when onBlur event handler runs

--- a/src/App.css
+++ b/src/App.css
@@ -246,7 +246,7 @@ div>.titleContainer>.titleInput {
 
 .reactorActions:nth-child(2) {
     text-overflow: ellipsis;
-    text-align: center;
+    margin-left: 20px;
 }
 
 .reactorActions>.reactorShutdownBtn {
@@ -280,6 +280,14 @@ div>.titleContainer>.titleInput {
     background: var(--dark-blue);
     outline: 2px solid var(--orange);
     color: var(--white);
+}
+
+.rodStateContainer > .rodInputAmount {
+    background: var(--white);
+    width: 55px;
+    height: 25px;
+    border: 1px solid var(--orange);
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
 @media screen and (max-width: 1050px) {
